--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- toast -->
         <section>
         <div class="container">
-          <h2 class="py-3 text-center"></h2>
+          <h2 class="py-3 text-center shadow-lg"></h2>
           <div class="row-py-3">
           <div class="col">
             <div class="toast show">
